cmake_minimum_required(VERSION 3.14)
project(l5_bf VERSION 1.0.0.0 LANGUAGES CXX)
if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
	set(CMAKE_CXX_STANDARD 20)
	set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)
if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(WARN "")
elseif(MSVC)
	set(WARN /W4 /WX)
else()
	set(WARN -Wall -Wextra -Wpedantic)
endif()
if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
	include(CheckIPOSupported)
	check_ipo_supported(RESULT ipo_supported OUTPUT ipo_error)
endif()


include(FetchContent)

add_subdirectory(src)
